# cmake_timestamp

./: CMakeLists.txt  readme.txt  timestamp.c  timestamp.h
